# cm_actuation

./: CMakeLists.txt  LICENSE  README.md  package.xml
code/: BIGSSMaxonCAN.cpp  BIGSSMaxonCANROS.cpp  bigss_maxon_can_ros copy.cpp  bigss_maxon_can_ros_node.cpp  can_test.cpp  pcan_setup.md
code/canopen/: CMakeLists.txt  package.xml
code/canopen/include/: canfilter.hpp  canframe.hpp  canopen.hpp  cia301.hpp  cia402.hpp  maxon.hpp  socketcan.hpp
code/canopen/src/: canframe.cpp  canopen.cpp  socketcan.cpp
include/cm_actuation/: BIGSSMaxonCAN.hpp  BIGSSMaxonCANROS.hpp
launch/: README.md  ambf_ur5.launch  ambf_ur5_roll_act.launch  ambf_ur5_roll_act_crtk.launch  ambf_ur5_roll_act_crtk_separate.launch  ambf_ur5_roll_act_setup.launch  ambf_ur5_roll_act_setup_separate.launch  ambf_ur5_roll_act_setup_uronly.launch  bigss_act_unit.launch  bigss_maxon_can_ros_example_node.launch  bigss_roll_act.launch  roslaunch_ambf_wrapper.launch
resources/: Roll_EPOS4_CAN_RXPDO.xlsx
scripts/: example_sinusoidal_pos_script.py  example_sinusoidal_vel_script.py  roll_act_simple_ros_ui.py
simul/: ambf_launch.yaml  ambf_roll_actuator.py
simul/ADF/: roll_and_cm_act.yaml  roll_and_cm_act.yaml.old  ur5_roll_and_cm_act.yaml  ur5_roll_and_cm_act.yaml.old  ur5_to_roll_connection.yaml
simul/ADF/meshes/high_res/: base_link.STL  cm_act.mtl  forearm_link.STL  forearm_link.mtl  roll_base.mtl  shoulder_link.mtl  upper_arm_link.STL  wrist_1_link.STL  wrist_1_link.mtl  wrist_2_link.STL
simul/ADF/meshes/low_res/: cm_act.STL  roll_base.mtl  shoulder_link.STL  upper_arm_link.mtl  wrist_2_link.mtl  wrist_3_link.STL  wrist_3_link.mtl
simul/ADF/world/: world.yaml  world_no_gravity.yaml
